--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.1.2"
   },
   "scripts": {
